implementations/rust/ockam/ockam/tests/node_test/pass_with_macro_arg_crate.rs
#[ockam::test(crate = "ockam")]
async fn my_test(ctx: &mut ockam::Context) -> ockam_core::Result<()> {
    ctx.stop().await
}

fn main() {}
